--- a/about-me.html
+++ b/about-me.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+            .beep {
+        border: 3px outset maroon;
+        background-color: lightblue;
+        text-align: center;
+    }
+    </style>
+
 </head>
 <body>
-    <h1>Fond Memories and My Favorite Movie</h1>
-    <p>When I lived in Florida when I was younger, we had a pool. Me and my brother would swim a lot and sometimes our cousins would come over too. There are a few things I remember, like we'd chill and eat juice pops made from the little molds and chill while it rained. My dad decided to set up a "water park" with a bunch of pvc pipes using the hot tub jets. The jets would push water through the pipes and the water would squirt throught the holes my dad had made in the pvc. At some point we even had a water slide going into the pool. It was a lot of fun with my family.</p>
+    <h1 class = beep>Fond Memories and My Favorite Movie</h1>
+    <p class = beep>
+        When I lived in Florida when I was younger, we had a pool. 
+        Me and my brother would swim a lot and sometimes our cousins would come over too. 
+        There are a few things I remember, like we'd chill and eat juice pops made from the little molds and chill while it rained. 
+        My dad decided to set up a "water park" with a bunch of pvc pipes using the hot tub jets. 
+        The jets would push water through the pipes and the water would squirt throught the holes my dad had made in the pvc. 
+        At some point we even had a water slide going into the pool. 
+        It was a lot of fun with my family.
+    </p>
     <img src = favMov.jpeg "Lilo & Stitch" width="200">
 </body>
 </html>
