--- a/about-me.html
+++ b/about-me.html
@@ -25,6 +25,6 @@
         At some point we even had a water slide going into the pool. 
         It was a lot of fun with my family.
     </p>
-    <img src = favMov.jpeg "Lilo & Stitch" width="200">
+    <img src = favMov.jpeg alt="Lilo & Stitch" width="200">
 </body>
 </html>
